--- a/index.html
+++ b/index.html
@@ -4,10 +4,104 @@
 <head>
   <meta charset="utf-8">
   <title>Music History</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
+    <fieldset class="navbar">
+      <a href="#">View music</a>
+      <p> | </p>
+      <a href="#">Add Music</a>
+      <p> | </p>
+      <a href="#">Profile</a>
+    </fieldset>
+
+    <div class="artist">
+    <fieldset class="artistSelect">
+
+    <!-- Range Slider !-->
+      <p>Song length:</p>
+      <input id="songLength" type="range"/>
+
+  <!-- Artists !-->
+
+      <select>
+        <option disabled selected>Select an artist.</option>
+        <option>Prince</option>
+        <option>Ol' Dirty Bastard</option>
+        <option>Mozart</option>
+        <option>Beethoven</option>
+        <option>Brahms</option>
+      </select>
+
+  <!-- Artist Albums !-->
+
+      <select>
+        <option disabled selected>Albums by Prince</option>
+        <option>For You</option>
+        <option>Prince</option>
+        <option>Dirty Mind</option>
+        <option>Controversy</option>
+        <option>1999</option>
+      </select>
+
+      <select>
+        <option disabled selected>Albums by Ol' Dirty Bastard</option>
+        <option>For You</option>
+        <option>Prince</option>
+        <option>Dirty Mind</option>
+        <option>Controversy</option>
+        <option>1999</option>
+      </select>
+
+      <select>
+        <option disabled selected>Albums by Ol' Dirty Bastard</option>
+        <option>For You</option>
+        <option>Prince</option>
+        <option>Dirty Mind</option>
+        <option>Controversy</option>
+        <option>1999</option>
+      </select>
+
+          <select>
+        <option disabled selected>Albums by Ol' Dirty Bastard</option>
+        <option>For You</option>
+        <option>Prince</option>
+        <option>Dirty Mind</option>
+        <option>Controversy</option>
+        <option>1999</option>
+      </select>
+
+          <select>
+        <option disabled selected>Albums by Ol' Dirty Bastard</option>
+        <option>For You</option>
+        <option>Prince</option>
+        <option>Dirty Mind</option>
+        <option>Controversy</option>
+        <option>1999</option>
+      </select>
+
+      <!-- Genre buttons !-->
+      <div class="radioButtonAlign">
+      <p>Select a genre:</p>
+      <input type="radio" name="Rock" value="Rock"><label>Rock</label>
+      <input type="radio" name="Pop" value="Pop"><label>Pop</label>
+      <input type="radio" name="Blues" value="Blues"><label>Blues</label>
+      <input type="radio" name="Classical" value="Classical"><label>Classical</label>
+      <input type="radio" name="Jazz" value="Jazz"><label>Jazz</label>
+      <input type="radio" name="Hip-hop" value="Hip-hop"><label>Hip hop</label>
+      </div>
+
+    </fieldset>
+    </div>
+
+    <fieldset class="song">
+      <h3>Song Name</h1><p>Artist name | Album name | Genre</p>
+      <h3>Song Name</h1><p>Artist name | Album name | Genre</p>
+      <h3>Song Name</h1><p>Artist name | Album name | Genre</p>
+      <h3>Song Name</h1><p>Artist name | Album name | Genre</p>
+    </fieldset>
 
 </body>
 </html>
