--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         Jazz</label>
         <label>
         <input type="radio" name="Hip-hop" value="Hip-hop">
-        Hip hop</label>
+        Hip Hop</label>
       </div>
 
 
