--- a/index.html
+++ b/index.html
@@ -119,12 +119,13 @@
     </fieldset>
     </div>
 
-    <fieldset class="song">
-      <h3>Song Name</h1><p>Artist name | Album name | Genre</p>
-      <h3>Song Name</h1><p>Artist name | Album name | Genre</p>
-      <h3>Song Name</h1><p>Artist name | Album name | Genre</p>
-      <h3>Song Name</h1><p>Artist name | Album name | Genre</p>
+    <fieldset class="song" id="listSongs">
+      <h3>Song Name</h1><p>Artist name | Album name</p>
+      <h3>Song Name</h1><p>Artist name | Album name</p>
+      <h3>Song Name</h1><p>Artist name | Album name</p>
+      <h3>Song Name</h1><p>Artist name | Album name</p>
     </fieldset>
 
+<script src="java.js"></script>
 </body>
 </html>
