adding iifes and spa functionality

--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
     <fieldset class="navbar">
       <a href="#">View music</a>
       <p> | </p>
-      <a href="#">Add Music</a>
+      <a href="#">List Music</a>
+      <p> | </p>
+      <a href="#" id="elAddMusic">Add Music</a>
       <p> | </p>
       <a href="#">Profile</a>
     </fieldset>
+
+    <div id="addArtist" class="addArtist, visibility">
+        Artist: <input type="text" name="Artist">
+        Song: <input type="text" name="Song">
+        Album: <input type="text" name="Album">
+        <input type="button" value="Add" id="addArtistButton">
+    </div>
 
     <div class="artist">
     <fieldset class="artistSelect">
