added show/hide functionality

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     </fieldset>
 
     <div id="addArtist" class="addArtist, visibility">
-        Artist: <input type="text" name="Artist">
-        Song: <input type="text" name="Song">
-        Album: <input type="text" name="Album">
+        Artist: <input type="text" name="Artist" id="newArtist">
+        Song: <input type="text" name="Song" id="newSong">
+        Album: <input type="text" name="Album" id="newAlbum">
         <input type="button" value="Add" id="addArtistButton">
     </div>
 
-    <div class="artist">
+    <div class="artist" id="artistSelect">
     <fieldset class="artistSelect">
 
     <!-- Range Slider !-->
