--- a/index.html
+++ b/index.html
@@ -122,18 +122,20 @@
         Hip Hop</label>
       </div>
 
-
-
-
     </fieldset>
     </div>
 
+    <div>
     <fieldset class="song" id="listSongs">
-      <h3>Song Name</h1><p>Artist name | Album name</p>
-      <h3>Song Name</h1><p>Artist name | Album name</p>
-      <h3>Song Name</h1><p>Artist name | Album name</p>
-      <h3>Song Name</h1><p>Artist name | Album name</p>
-    </fieldset>
+      <h3>Song Name</h3><p>Artist name | Album name</p>
+      <h3>Song Name</h3><p>Artist name | Album name</p>
+      <h3>Song Name</h3><p>Artist name | Album name</p>
+      <h3>Song Name</h3><p>Artist name | Album name</p>
+     </fieldset>
+     <input type="button" id="moreButton" class="song" value="more"></input>
+     </div>
+
+    
 
 <script src="java.js"></script>
 </body>
