starting to add jQuery

--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
         Song: <input type="text" name="Song" id="newSong">
         Album: <input type="text" name="Album" id="newAlbum">
         <input type="button" value="Add" id="addArtistButton">
+
+      <div id="userOutput">
+
+        <div id="artistOutput">
+          <p>Artist Output</p>
+        </div>
+
+        <div id="songOutput">
+          <p>Song Output</p>
+        </div>
+
+        <div id="albumOutput">
+          <p>Album Output</p>
+        </div>
+
+      </div>
+
     </div>
 
     <div class="artist" id="artistSelect">
@@ -136,7 +153,8 @@
      </div>
 
     
-
+<script  src="https://code.jquery.com/jquery-3.0.0.min.js"  integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="crossorigin="anonymous"></script>
 <script src="java.js"></script>
+<script src="verylargearray.js"></script>
 </body>
 </html>
